<resources>
    <string name="app_name">Reto 1</string>
    <string name="entrar">Entrar</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="errorContrasena">Ha habido un error en tu contraseña</string>
    <string name="entradaCorrecta">Ha entrado correctamente</string>
    <string name="nuevaTarea">Nueva Tarea</string>
    <string name="listaTareas">Lista de Tareas</string>
    <string name="pantallaPrincipal">Pantalla Principal</string>
    <string name="cambiarContrasena">Cambiar Contraseña</string>
    <string name="acercaDe">Acerca De</string>
    <string name="nombreApp">Nombre de la App:</string>
    <string name="versionApp">Version de la App:</string>
    <string name="appVersion">1,0</string>
    <string name="introducirAntigua">Contraseña antigua</string>
    <string name="introducirNueva">Contraseña nueva</string>
    <string name="contrasenaCambiada">Contraseña cambiada</string>
    <string name="contrasenaNoCambiada">La contraseña antigua no coincide</string>
    <string name="nuevaTareaNombre">Nombre</string>
    <string name="nuevaTareaDescripcion">Descripción</string>
    <string name="nuevaTareaFecha">Fecha</string>
    <string name="nuevaTareaPrioridad">Prioridad</string>
    <string name="nuevaTareaCoste">Coste</string>
    <string name="nuevaTareaRegistrar">Registrar</string>
    <string name="nuevaTareaCancelar">Cancelar</string>
    <string-array name="spinnerPrioridadDatos">
        <item>Urgente</item>
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>
    <string name="toastDatosGuardadosTarea">Se guardaron los datos de la tarea</string>
    <string name="toastFechaIncorrecta">La fecha es incorrecta, use el formato dd/MM/yyyy</string>
    <string name="toastCamposVacios">No se pueden dejar campos vacios</string>
    <string name="pantallaDetallesTarea">Detalles Tarea</string>
    <string name="tareaDetallesVolver">Volver</string>
    <string name="mantenerTextoModificar">Modificar</string>
    <string name="mantenerTextoBorrar">Borrar</string>
    <string name="hechas">Hechas</string>
    <string name="pendientes">Pendientes</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="alertTitle">Borrar Tarea</string>
    <string name="alertMessage">¿Quieres borrar la tarea?</string>
    <string name="realizada">Realizada</string>
    <string name="urgente">Urgente</string>
    <string name="alta">Alta</string>
    <string name="media">Media</string>
    <string name="baja">Baja</string>
    <string name="paraEl">Para el: </string>
    <string name="seNecesita">Se necesita: </string>
    <string name="toastNoExiste">No existen datos en la BDD</string>
    <string name="eligeOpcion">Elige una opcion:</string>
    <string name="borradoTarea">Se ha borrado la tarea</string>
    <string name="canceladoBorrado">Has cancelado el borrado</string>
    <string name="fechaVersionApp">Fecha de la versión:</string>
    <string name="correoContacto">Correo:"</string>
    <string name="toastFiltrarHechas">Se han filtrado por tareas hechas</string>
    <string name="toastFiltrarPendientes">Se han filtrado por tareas pendientes</string>
</resources>