<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaAcercaDe">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <TextView
                android:id="@+id/txtNombreApp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nombreApp" />

            <TextView
                android:id="@+id/txtAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="52dp">

            <TextView
                android:id="@+id/txtVersionApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versionApp" />

            <TextView
                android:id="@+id/txtAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appVersion" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>